Removed new Float() call for latest JDK